{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 7523,
  "lineage": "ce84194c-6401-221a-c7f7-715454bad9c6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a1ea2d03ca815d77",
            "arn": "arn:aws:ec2:us-east-1:431998380302:elastic-ip/eipalloc-0a1ea2d03ca815d77",
            "domain": "vpc",
            "id": "eipalloc-0a1ea2d03ca815d77",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-23-47-125.compute-1.amazonaws.com",
            "public_ip": "52.23.47.125",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Env": "dev",
              "Name": "anbapp-nat-eip",
              "Project": "anbapp"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "anbapp-nat-eip",
              "Project": "anbapp"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c3e8df62015275ea",
            "arn": "arn:aws:ec2:us-east-1:431998380302:instance/i-0a84ea151f2a6156c",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "LabInstanceProfile",
            "id": "i-0a84ea151f2a6156c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-032002f88b71b441b",
            "private_dns": "ip-10-0-2-126.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.126",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09946036df06fb24d",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dea0c7949de52903",
            "tags": {
              "Name": "anbapp-worker",
              "Project": "anbapp"
            },
            "tags_all": {
              "Name": "anbapp-worker",
              "Project": "anbapp"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-052c59bfeedc257ba"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_db_instance.main",
            "aws_db_parameter_group.pg",
            "aws_db_subnet_group.main",
            "aws_s3_bucket.storage",
            "aws_security_group.rds",
            "aws_security_group.worker",
            "aws_sqs_queue.video_processing",
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "data.aws_iam_instance_profile.lab_instance_profile",
            "data.aws_key_pair.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431998380302:internet-gateway/igw-004f042ec79fee83f",
            "id": "igw-004f042ec79fee83f",
            "owner_id": "431998380302",
            "tags": {
              "Env": "dev",
              "Name": "anbapp-igw",
              "Project": "anbapp"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "anbapp-igw",
              "Project": "anbapp"
            },
            "vpc_id": "vpc-03bf52e26cf7da085"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:431998380302:loadbalancer/app/anbapp-alb/256ef7b190d65dae",
            "arn_suffix": "app/anbapp-alb/256ef7b190d65dae",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "anbapp-alb-536689945.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:431998380302:loadbalancer/app/anbapp-alb/256ef7b190d65dae",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "anbapp-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0604206bcb11d0045"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-046dce458cd627fe4"
              },
              {
                "subnet_id": "subnet-07dd9fb451c18b2b7"
              }
            ],
            "subnets": [
              "subnet-046dce458cd627fe4",
              "subnet-07dd9fb451c18b2b7"
            ],
            "tags": {
              "Name": "anbapp-alb",
              "Project": "anbapp"
            },
            "tags_all": {
              "Name": "anbapp-alb",
              "Project": "anbapp"
            },
            "vpc_id": "vpc-03bf52e26cf7da085",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_subnet.public_b",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:431998380302:listener/app/anbapp-alb/256ef7b190d65dae/445900399b24b85f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Not Found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:431998380302:listener/app/anbapp-alb/256ef7b190d65dae/445900399b24b85f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:431998380302:loadbalancer/app/anbapp-alb/256ef7b190d65dae",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_subnet.public_b",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "auth",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:431998380302:targetgroup/anbapp-auth-tg/5ee9bddef5862447",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:431998380302:listener-rule/app/anbapp-alb/256ef7b190d65dae/445900399b24b85f/4e6edd94385342ca",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/auth*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:431998380302:listener-rule/app/anbapp-alb/256ef7b190d65dae/445900399b24b85f/4e6edd94385342ca",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:431998380302:listener/app/anbapp-alb/256ef7b190d65dae/445900399b24b85f",
            "priority": 10,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.http",
            "aws_lb_target_group.auth",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_subnet.public_b",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "front",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:431998380302:targetgroup/anbapp-front-tg/429bf50e3d755b0a",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:431998380302:listener-rule/app/anbapp-alb/256ef7b190d65dae/445900399b24b85f/53e822a9ee506653",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:431998380302:listener-rule/app/anbapp-alb/256ef7b190d65dae/445900399b24b85f/53e822a9ee506653",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:431998380302:listener/app/anbapp-alb/256ef7b190d65dae/445900399b24b85f",
            "priority": 50,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.http",
            "aws_lb_target_group.front",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_subnet.public_b",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "ranking",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:431998380302:targetgroup/anbapp-ranking-tg/c1c98a4473c8df17",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:431998380302:listener-rule/app/anbapp-alb/256ef7b190d65dae/445900399b24b85f/2170c82cfdbd8b88",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/public/rankings*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:431998380302:listener-rule/app/anbapp-alb/256ef7b190d65dae/445900399b24b85f/2170c82cfdbd8b88",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:431998380302:listener/app/anbapp-alb/256ef7b190d65dae/445900399b24b85f",
            "priority": 40,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.http",
            "aws_lb_target_group.ranking",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_subnet.public_b",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "video",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:431998380302:targetgroup/anbapp-video-tg/26269728f03bbce6",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:431998380302:listener-rule/app/anbapp-alb/256ef7b190d65dae/445900399b24b85f/26917557f05448e9",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/videos*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:431998380302:listener-rule/app/anbapp-alb/256ef7b190d65dae/445900399b24b85f/26917557f05448e9",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:431998380302:listener/app/anbapp-alb/256ef7b190d65dae/445900399b24b85f",
            "priority": 20,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.http",
            "aws_lb_target_group.video",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_subnet.public_b",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "voting",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:431998380302:targetgroup/anbapp-voting-tg/8cbbb6dab55ee72b",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:431998380302:listener-rule/app/anbapp-alb/256ef7b190d65dae/445900399b24b85f/fd6eb88cd112ff30",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/public/videos*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:431998380302:listener-rule/app/anbapp-alb/256ef7b190d65dae/445900399b24b85f/fd6eb88cd112ff30",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:431998380302:listener/app/anbapp-alb/256ef7b190d65dae/445900399b24b85f",
            "priority": 30,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.http",
            "aws_lb_target_group.voting",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_subnet.public_b",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "auth",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:431998380302:targetgroup/anbapp-auth-tg/5ee9bddef5862447",
            "arn_suffix": "targetgroup/anbapp-auth-tg/5ee9bddef5862447",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:431998380302:targetgroup/anbapp-auth-tg/5ee9bddef5862447",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "anbapp-auth-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "anbapp-auth-tg",
              "Project": "anbapp"
            },
            "tags_all": {
              "Name": "anbapp-auth-tg",
              "Project": "anbapp"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03bf52e26cf7da085"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "front",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:431998380302:targetgroup/anbapp-front-tg/429bf50e3d755b0a",
            "arn_suffix": "targetgroup/anbapp-front-tg/429bf50e3d755b0a",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:431998380302:targetgroup/anbapp-front-tg/429bf50e3d755b0a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "anbapp-front-tg",
            "port": 8084,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "anbapp-front-tg",
              "Project": "anbapp"
            },
            "tags_all": {
              "Name": "anbapp-front-tg",
              "Project": "anbapp"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03bf52e26cf7da085"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ranking",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:431998380302:targetgroup/anbapp-ranking-tg/c1c98a4473c8df17",
            "arn_suffix": "targetgroup/anbapp-ranking-tg/c1c98a4473c8df17",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:431998380302:targetgroup/anbapp-ranking-tg/c1c98a4473c8df17",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "anbapp-ranking-tg",
            "port": 8083,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "anbapp-ranking-tg",
              "Project": "anbapp"
            },
            "tags_all": {
              "Name": "anbapp-ranking-tg",
              "Project": "anbapp"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03bf52e26cf7da085"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "video",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:431998380302:targetgroup/anbapp-video-tg/26269728f03bbce6",
            "arn_suffix": "targetgroup/anbapp-video-tg/26269728f03bbce6",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:431998380302:targetgroup/anbapp-video-tg/26269728f03bbce6",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "anbapp-video-tg",
            "port": 8081,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "anbapp-video-tg",
              "Project": "anbapp"
            },
            "tags_all": {
              "Name": "anbapp-video-tg",
              "Project": "anbapp"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03bf52e26cf7da085"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "voting",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:431998380302:targetgroup/anbapp-voting-tg/8cbbb6dab55ee72b",
            "arn_suffix": "targetgroup/anbapp-voting-tg/8cbbb6dab55ee72b",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:431998380302:targetgroup/anbapp-voting-tg/8cbbb6dab55ee72b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "anbapp-voting-tg",
            "port": 8082,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "anbapp-voting-tg",
              "Project": "anbapp"
            },
            "tags_all": {
              "Name": "anbapp-voting-tg",
              "Project": "anbapp"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03bf52e26cf7da085"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a1ea2d03ca815d77",
            "association_id": "eipassoc-0bcf45eee00be8d28",
            "connectivity_type": "public",
            "id": "nat-02df13b338370dab5",
            "network_interface_id": "eni-0c4cc92e71bbbc271",
            "private_ip": "10.0.1.88",
            "public_ip": "52.23.47.125",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-046dce458cd627fe4",
            "tags": {
              "Env": "dev",
              "Name": "anbapp-nat",
              "Project": "anbapp"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "anbapp-nat",
              "Project": "anbapp"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ef9bf90eeafdbf3e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02df13b338370dab5",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ef9bf90eeafdbf3e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_inet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-004f042ec79fee83f",
            "id": "r-rtb-0a3daf5138d2dad521080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a3daf5138d2dad52",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431998380302:route-table/rtb-0ef9bf90eeafdbf3e",
            "id": "rtb-0ef9bf90eeafdbf3e",
            "owner_id": "431998380302",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Env": "dev",
              "Name": "anbapp-rt-private",
              "Project": "anbapp"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "anbapp-rt-private",
              "Project": "anbapp"
            },
            "timeouts": null,
            "vpc_id": "vpc-03bf52e26cf7da085"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431998380302:route-table/rtb-0a3daf5138d2dad52",
            "id": "rtb-0a3daf5138d2dad52",
            "owner_id": "431998380302",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Env": "dev",
              "Name": "anbapp-rt-public",
              "Project": "anbapp"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "anbapp-rt-public",
              "Project": "anbapp"
            },
            "timeouts": null,
            "vpc_id": "vpc-03bf52e26cf7da085"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-082b18e4f6968f031",
            "route_table_id": "rtb-0ef9bf90eeafdbf3e",
            "subnet_id": "subnet-0dea0c7949de52903"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_a",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a864c0e1997ffd7c",
            "route_table_id": "rtb-0ef9bf90eeafdbf3e",
            "subnet_id": "subnet-0d377534ff00d4f23"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_b",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03cb58e576df837fa",
            "route_table_id": "rtb-0a3daf5138d2dad52",
            "subnet_id": "subnet-046dce458cd627fe4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09479af2506c8293d",
            "route_table_id": "rtb-0a3daf5138d2dad52",
            "subnet_id": "subnet-07dd9fb451c18b2b7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_b",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431998380302:security-group/sg-0604206bcb11d0045",
            "description": "Allow HTTP/HTTPS from Internet to ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0604206bcb11d0045",
            "ingress": [],
            "name": "anbapp-alb-sg",
            "name_prefix": "",
            "owner_id": "431998380302",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Name": "anbapp-alb-sg",
              "Project": "anbapp"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "anbapp-alb-sg",
              "Project": "anbapp"
            },
            "timeouts": null,
            "vpc_id": "vpc-03bf52e26cf7da085"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431998380302:security-group/sg-0e6d54d9e702c3c8d",
            "description": "RDS security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e6d54d9e702c3c8d",
            "ingress": [],
            "name": "anbapp-rds-sg",
            "name_prefix": "",
            "owner_id": "431998380302",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Name": "anbapp-rds-sg",
              "Project": "anbapp"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "anbapp-rds-sg",
              "Project": "anbapp"
            },
            "timeouts": null,
            "vpc_id": "vpc-03bf52e26cf7da085"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpce",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431998380302:security-group/sg-038be578ce661f8b4",
            "description": "SG for SSM/KMS VPC Endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-038be578ce661f8b4",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "anbapp-vpce-sg",
            "name_prefix": "",
            "owner_id": "431998380302",
            "revoke_rules_on_delete": false,
            "tags": {
              "Project": "anbapp"
            },
            "tags_all": {
              "Project": "anbapp"
            },
            "timeouts": null,
            "vpc_id": "vpc-03bf52e26cf7da085"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431998380302:security-group/sg-0b0df10bd572d3df8",
            "description": "Allow HTTP/HTTPS from Internet; SSH from allowed CIDR",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b0df10bd572d3df8",
            "ingress": [],
            "name": "anbapp-web-sg",
            "name_prefix": "",
            "owner_id": "431998380302",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Name": "anbapp-web-sg",
              "Project": "anbapp"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "anbapp-web-sg",
              "Project": "anbapp"
            },
            "timeouts": null,
            "vpc_id": "vpc-03bf52e26cf7da085"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431998380302:security-group/sg-052c59bfeedc257ba",
            "description": "Worker in private subnet; SSH from admin IP (optional)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-052c59bfeedc257ba",
            "ingress": [],
            "name": "anbapp-worker-sg",
            "name_prefix": "",
            "owner_id": "431998380302",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Name": "anbapp-worker-sg",
              "Project": "anbapp"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "anbapp-worker-sg",
              "Project": "anbapp"
            },
            "timeouts": null,
            "vpc_id": "vpc-03bf52e26cf7da085"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431998380302:subnet/subnet-0dea0c7949de52903",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dea0c7949de52903",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "431998380302",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "anbapp-private-a-us-east-1a",
              "Project": "anbapp",
              "Tier": "private"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "anbapp-private-a-us-east-1a",
              "Project": "anbapp",
              "Tier": "private"
            },
            "vpc_id": "vpc-03bf52e26cf7da085"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431998380302:subnet/subnet-0d377534ff00d4f23",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d377534ff00d4f23",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "431998380302",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "anbapp-private-b-us-east-1b",
              "Project": "anbapp",
              "Tier": "private"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "anbapp-private-b-us-east-1b",
              "Project": "anbapp",
              "Tier": "private"
            },
            "vpc_id": "vpc-03bf52e26cf7da085"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431998380302:subnet/subnet-046dce458cd627fe4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-046dce458cd627fe4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "431998380302",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "anbapp-public-us-east-1a",
              "Project": "anbapp",
              "Tier": "public"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "anbapp-public-us-east-1a",
              "Project": "anbapp",
              "Tier": "public"
            },
            "vpc_id": "vpc-03bf52e26cf7da085"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431998380302:subnet/subnet-07dd9fb451c18b2b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07dd9fb451c18b2b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "431998380302",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "anbapp-public-us-east-1b",
              "Project": "anbapp",
              "Tier": "public"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "anbapp-public-us-east-1b",
              "Project": "anbapp",
              "Tier": "public"
            },
            "vpc_id": "vpc-03bf52e26cf7da085"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431998380302:vpc/vpc-03bf52e26cf7da085",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a9ed8fe2b6042051",
            "default_route_table_id": "rtb-09d88ac5ee13c0a99",
            "default_security_group_id": "sg-001c9d0a9a6df6650",
            "dhcp_options_id": "dopt-0d9298aa6a201f1b7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03bf52e26cf7da085",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09d88ac5ee13c0a99",
            "owner_id": "431998380302",
            "tags": {
              "Env": "dev",
              "Name": "anbapp-vpc",
              "Project": "anbapp"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "anbapp-vpc",
              "Project": "anbapp"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431998380302:vpc-endpoint/vpce-0d46fd1688e421414",
            "dns_entry": [
              {
                "dns_name": "vpce-0d46fd1688e421414-qtrevoxn.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0d46fd1688e421414-qtrevoxn-us-east-1a.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0d46fd1688e421414-qtrevoxn-us-east-1b.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ec2messages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z00043402PJA8EI5FPWQJ"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0d46fd1688e421414",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-08e419360a6e6b6c2",
              "eni-0f805025758998ba8"
            ],
            "owner_id": "431998380302",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-038be578ce661f8b4"
            ],
            "service_name": "com.amazonaws.us-east-1.ec2messages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.112",
                "subnet_id": "subnet-0dea0c7949de52903"
              },
              {
                "ipv4": "10.0.3.40",
                "subnet_id": "subnet-0d377534ff00d4f23"
              }
            ],
            "subnet_ids": [
              "subnet-0d377534ff00d4f23",
              "subnet-0dea0c7949de52903"
            ],
            "tags": {
              "Project": "anbapp"
            },
            "tags_all": {
              "Project": "anbapp"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-03bf52e26cf7da085"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpce",
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kms",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431998380302:vpc-endpoint/vpce-0486c491b21cd2eff",
            "dns_entry": [
              {
                "dns_name": "vpce-0486c491b21cd2eff-730pbsa1.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0486c491b21cd2eff-730pbsa1-us-east-1a.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0486c491b21cd2eff-730pbsa1-us-east-1b.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "kms.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z00043452JL73SLV5VZF7"
              },
              {
                "dns_name": "kms.us-east-1.api.aws",
                "hosted_zone_id": "Z08103431OJITLOWQ4O6A"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0486c491b21cd2eff",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0b8f3979a1847cf30",
              "eni-0ecee77e669cacfda"
            ],
            "owner_id": "431998380302",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-038be578ce661f8b4"
            ],
            "service_name": "com.amazonaws.us-east-1.kms",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.116",
                "subnet_id": "subnet-0dea0c7949de52903"
              },
              {
                "ipv4": "10.0.3.182",
                "subnet_id": "subnet-0d377534ff00d4f23"
              }
            ],
            "subnet_ids": [
              "subnet-0d377534ff00d4f23",
              "subnet-0dea0c7949de52903"
            ],
            "tags": {
              "Project": "anbapp"
            },
            "tags_all": {
              "Project": "anbapp"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-03bf52e26cf7da085"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpce",
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431998380302:vpc-endpoint/vpce-0b238067767136862",
            "dns_entry": [
              {
                "dns_name": "vpce-0b238067767136862-4ojefacu.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0b238067767136862-4ojefacu-us-east-1b.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0b238067767136862-4ojefacu-us-east-1a.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssm.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z10018533TDJKVHD8K9AB"
              },
              {
                "dns_name": "ssm.us-east-1.api.aws",
                "hosted_zone_id": "Z08053441ZL4XU0VVQ0G8"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0b238067767136862",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0902b93923562439a",
              "eni-0cb2cac444a957838"
            ],
            "owner_id": "431998380302",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-038be578ce661f8b4"
            ],
            "service_name": "com.amazonaws.us-east-1.ssm",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.94",
                "subnet_id": "subnet-0dea0c7949de52903"
              },
              {
                "ipv4": "10.0.3.29",
                "subnet_id": "subnet-0d377534ff00d4f23"
              }
            ],
            "subnet_ids": [
              "subnet-0d377534ff00d4f23",
              "subnet-0dea0c7949de52903"
            ],
            "tags": {
              "Project": "anbapp"
            },
            "tags_all": {
              "Project": "anbapp"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-03bf52e26cf7da085"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpce",
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431998380302:vpc-endpoint/vpce-0bf06cbfffdb87e2b",
            "dns_entry": [
              {
                "dns_name": "vpce-0bf06cbfffdb87e2b-9utrhb73.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0bf06cbfffdb87e2b-9utrhb73-us-east-1a.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0bf06cbfffdb87e2b-9utrhb73-us-east-1b.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssmmessages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z08034392GKW9RMJ03RVD"
              },
              {
                "dns_name": "ssmmessages.us-east-1.api.aws",
                "hosted_zone_id": "Z08034261066P85LANWZ9"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0bf06cbfffdb87e2b",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-04780cff2f571d5d0",
              "eni-0d764cbcb82d60a96"
            ],
            "owner_id": "431998380302",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-038be578ce661f8b4"
            ],
            "service_name": "com.amazonaws.us-east-1.ssmmessages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.206",
                "subnet_id": "subnet-0dea0c7949de52903"
              },
              {
                "ipv4": "10.0.3.204",
                "subnet_id": "subnet-0d377534ff00d4f23"
              }
            ],
            "subnet_ids": [
              "subnet-0d377534ff00d4f23",
              "subnet-0dea0c7949de52903"
            ],
            "tags": {
              "Project": "anbapp"
            },
            "tags_all": {
              "Project": "anbapp"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-03bf52e26cf7da085"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpce",
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431998380302:security-group-rule/sgr-0a2cc583e24fb187d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow HTTP from Internet to ALB",
            "from_port": 80,
            "id": "sgr-0a2cc583e24fb187d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0604206bcb11d0045",
            "security_group_rule_id": "sgr-0a2cc583e24fb187d",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431998380302:security-group-rule/sgr-04b4db9f37e44bd6b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow HTTPS from Internet to ALB",
            "from_port": 443,
            "id": "sgr-04b4db9f37e44bd6b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0604206bcb11d0045",
            "security_group_rule_id": "sgr-04b4db9f37e44bd6b",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "rds_from_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431998380302:security-group-rule/sgr-0e26d7f1726e1081c",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow DB from WEB",
            "from_port": 5432,
            "id": "sgr-0e26d7f1726e1081c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0b0df10bd572d3df8",
            "security_group_id": "sg-0e6d54d9e702c3c8d",
            "security_group_rule_id": "sgr-0e26d7f1726e1081c",
            "tags": null,
            "tags_all": {},
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.rds",
            "aws_security_group.web",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "rds_from_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431998380302:security-group-rule/sgr-03750b55377b7fc68",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow DB from WORKER",
            "from_port": 5432,
            "id": "sgr-03750b55377b7fc68",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-052c59bfeedc257ba",
            "security_group_id": "sg-0e6d54d9e702c3c8d",
            "security_group_rule_id": "sgr-03750b55377b7fc68",
            "tags": null,
            "tags_all": {},
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.rds",
            "aws_security_group.worker",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "web_auth",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431998380302:security-group-rule/sgr-03f753b63202e5498",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow Auth from from ALB",
            "from_port": 8080,
            "id": "sgr-03f753b63202e5498",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0604206bcb11d0045",
            "security_group_id": "sg-0b0df10bd572d3df8",
            "security_group_rule_id": "sgr-03f753b63202e5498",
            "tags": null,
            "tags_all": {},
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.web",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "web_front",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431998380302:security-group-rule/sgr-07036da26b76e46dc",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow access to frontend application from ALB",
            "from_port": 8084,
            "id": "sgr-07036da26b76e46dc",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0604206bcb11d0045",
            "security_group_id": "sg-0b0df10bd572d3df8",
            "security_group_rule_id": "sgr-07036da26b76e46dc",
            "tags": null,
            "tags_all": {},
            "to_port": 8084
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.web",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "web_http_from_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431998380302:security-group-rule/sgr-05da2fce038a77f6a",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow HTTP from ALB",
            "from_port": 80,
            "id": "sgr-05da2fce038a77f6a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0604206bcb11d0045",
            "security_group_id": "sg-0b0df10bd572d3df8",
            "security_group_rule_id": "sgr-05da2fce038a77f6a",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.web",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "web_https_from_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431998380302:security-group-rule/sgr-0ce48294e75148c34",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow HTTPS from ALB",
            "from_port": 443,
            "id": "sgr-0ce48294e75148c34",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0604206bcb11d0045",
            "security_group_id": "sg-0b0df10bd572d3df8",
            "security_group_rule_id": "sgr-0ce48294e75148c34",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.web",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "web_ranking",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431998380302:security-group-rule/sgr-0c7be6dc616d3cf18",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow Ranking from ALB",
            "from_port": 8083,
            "id": "sgr-0c7be6dc616d3cf18",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0604206bcb11d0045",
            "security_group_id": "sg-0b0df10bd572d3df8",
            "security_group_rule_id": "sgr-0c7be6dc616d3cf18",
            "tags": null,
            "tags_all": {},
            "to_port": 8083
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.web",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "web_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431998380302:security-group-rule/sgr-0e6d62dca251edf79",
            "cidr_ipv4": "181.59.2.82/32",
            "cidr_ipv6": null,
            "description": "Allow SSH from admin IP",
            "from_port": 22,
            "id": "sgr-0e6d62dca251edf79",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0b0df10bd572d3df8",
            "security_group_rule_id": "sgr-0e6d62dca251edf79",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.web",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "web_video",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431998380302:security-group-rule/sgr-0fd2d1bf0aef1eafe",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow Video from ALB",
            "from_port": 8081,
            "id": "sgr-0fd2d1bf0aef1eafe",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0604206bcb11d0045",
            "security_group_id": "sg-0b0df10bd572d3df8",
            "security_group_rule_id": "sgr-0fd2d1bf0aef1eafe",
            "tags": null,
            "tags_all": {},
            "to_port": 8081
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.web",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "web_voting",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431998380302:security-group-rule/sgr-0c5e120c16d884361",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow Voting from ALB",
            "from_port": 8082,
            "id": "sgr-0c5e120c16d884361",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0604206bcb11d0045",
            "security_group_id": "sg-0b0df10bd572d3df8",
            "security_group_rule_id": "sgr-0c5e120c16d884361",
            "tags": null,
            "tags_all": {},
            "to_port": 8082
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.web",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "worker_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431998380302:security-group-rule/sgr-08d8ecd30daaf9ea2",
            "cidr_ipv4": "181.59.2.82/32",
            "cidr_ipv6": null,
            "description": "Allow SSH from admin IP",
            "from_port": 22,
            "id": "sgr-08d8ecd30daaf9ea2",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-052c59bfeedc257ba",
            "security_group_rule_id": "sgr-08d8ecd30daaf9ea2",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.worker",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}